src/snapshots/libflatterer__yajlparser__tests__yajlparse_basic_array.snap
---
source: src/yajlparser.rs
expression: "parse(\"fixtures/yajl_array.json\")"

---
- - a: b
  - a: c
- - - moo
  - - moo
- "{\"moo\":[]}"

